cabal-version:      2.4
name:               common-contents
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             'Thomas Eding'
maintainer:         'thomaseding@gmail.com'

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable common-contents
    main-is:          Main.hs

    hs-source-dirs:   src

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.14.3.0,
      containers ^>=0.6.5.1,
      directory ^>=1.3.6.0,
      filepath ^>=1.4.2.1
    default-language: Haskell2010
